# mnist-pure-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  inference.py  playground.py  pyproject.toml
misc/: draw.py
src/: data.py  extract_sample.py  gui.py  model.py  settings.py  test.py  train.py
